tests/types/errors/semicolon_statement.mog
var x i32 = 1;
print(x)
